# QuickPreview

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/: ninja-icon.icns  ninjaview.desktop
scripts/: build_test_run.sh  generate_coverage.sh  make_mac_release.sh
src/: CMakeLists.txt  NinjaMain.cpp  main.cpp
src/core/: ExifDatabase.cpp  ExifDatabase.h  ExifReader.cpp  ExifReader.h  FileActionService.cpp  FileActionService.h  FileDiscoveryService.cpp  FileDiscoveryService.h  Logger.cpp  Logger.h  VolumeMonitor.cpp  VolumeMonitor.h
src/qml/: AboutDialog.qml  ExifOverlay.qml  Main.qml  PreviewOverlay.qml  SettingsWindow.qml
src/qml/components/: ExifOverlay.qml  GalleryPanel.qml  ImageInfoPanel.qml  SidebarPanel.qml  ZoomableImage.qml
src/qml/dialogs/: AboutDialog.qml  SettingsWindow.qml
src/qml/views/: NinjaWindow.qml  PreviewOverlay.qml
src/ui/: AsyncImageProvider.cpp  AsyncImageProvider.h  GalleryFilterProxyModel.cpp  GalleryFilterProxyModel.h  GalleryListModel.cpp  GalleryListModel.h
tests/: CMakeLists.txt  qml_test_launcher.cpp  tst_aboutdialog.qml  tst_asyncimageprovider.cpp  tst_exifdatabase.cpp  tst_exifoverlay.qml  tst_exifreader.cpp  tst_exifreader_extended.cpp  tst_fileactionservice.cpp  tst_filediscoveryservice.cpp  tst_galleryfilterproxymodel.cpp  tst_gallerylistmodel.cpp  tst_gallerylistmodel_extended.cpp  tst_logger.cpp  tst_main.qml  tst_previewoverlay.qml  tst_settingswindow.qml  tst_volumemonitor.cpp
